--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <input type="text" class="form-input" name="username" placeholder="email address" required="" autofocus="" />
         </div>
         <div class="form-group">
-          <label for="password-signup" placeholder="email address">password:</label>
+          <label for="password-signup" placeholder="password">password:</label>
           <input class="form-input" type="password" id="password-signup" placeholder="password"/>
         </div>
         <div class="form-group">
@@ -53,12 +53,13 @@
         <div>
         <label for="pettrax-address">address:</label>
         <input class="form-input" type="text" id="pettrax-address" name="pettrax-address" placeholder="street"/>
+        <label for="pettrax-address"></label>
+        <input class="form-input" type="text" id="pettrax-address" name="pettrax-address" placeholder="city"/>
         </div>
         <div>
+      <input class="form-input" type="text" id="pettrax-address" name="pettrax-address" placeholder="state"/>
       <label for="pettrax-address"></label>
-       <input class="form-input" type="text" id="pettrax-address" name="pettrax-address" placeholder="city"/>
-       <label for="pettrax-address"></label>
-       <input class="form-input" type="text" id="pettrax-address" name="pettrax-address" placeholder="state"/>
+       <input class="form-input" type="text" id="pettrax-address" name="pettrax-address" placeholder="zipcode"/>
       </div>
     <div class="form-group">
       <label for="phone">phone:</label>
@@ -96,11 +97,11 @@
     </div>
     <div class="form-group">
       <label for="species">color:</label>
-      <input class="form-input" type="number" id="pet-species" name="pet-species" placeholder="color" />
+      <input class="form-input" type="number" id="pet-color" name="pet-color" placeholder="color" />
     </div>
     <div class="form-group">
       <label for="species">birthmark:</label>
-      <input class="form-input" type="number" id="pet-species" name="pet-species" placeholder="birthmark" />
+      <input class="form-input" type="number" id="pet-color" name="pet-color" placeholder="birthmark" />
     </div>
     <div class="form-group">
       <p>more info about your pet:</p>
