updated js files in public folder for functionality with handlebars files, updated readme to appropriare sections and explaination

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h3>Sign up</h3>
       <form class="form signup-form">
         <div class="form-group">
-          <label for="email-signup">email:</label>
+          <label for="email-signup"></label>
           <input type="text" class="form-input" name="username" placeholder="email address" required="" autofocus="" />
         </div>
         <div class="form-group">
