--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,7 +16,7 @@
 <body class="container dashboard-page">
 
   <header class="container header">
-    <div class="col-10 col-md-6">
+    <div class="col-12">
       <nav class="d-flex justify-content-between">
         <a href="dashboard.html"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
         <a href="menu.html">Menu</a>
