--- a/public/html/menu.html
+++ b/public/html/menu.html
@@ -19,6 +19,7 @@
     <div class="col-12">
       <nav class="d-flex justify-content-between">
         <a href="dashboard.html"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
+        <a href="menu.html">Menu</a>
       </nav>
     </div>
   </header>
