--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -1,10 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<!--GOOGLE FONTS-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&family=Merienda:wght@700&display=swap" rel="stylesheet">
+<!--CUSTOM STYLES-->
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>PetTrax: Profile Admin</title>
+</head>
+
 <body class="container menu-page">
 
   <header class="container header">
     <div class="col-12">
       <nav class="d-flex justify-content-between">
         <a href="dashboard.html"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
-        <a href="menu.html">Menu</a>
       </nav>
     </div>
   </header>
@@ -13,9 +27,9 @@
   <div class="row justify-content-center">
     <!-- Login form wrapper -->
     <div class="col col-10 col-md-6">
-      <a href="dashboard.html" class="breadcrumb"><< Back to Dashboard</a>
       <h2>Start Tracking</h2>
-      <form action="./js/login.js" method="POST">
+      <!-- <form action="./js/menu.js" method="POST"> -->
+      <form action="./js/menu.js" method="POST"></form>
         <input type="email" id="email" name="email" placeholder="email address" required><br>
         <input type="password" id="password" name="password" placeholder="password" required><br><br>
         <button type="submit">LOG IN</button>
@@ -23,6 +37,12 @@
     </div>
   </div>
 
+  <!--JQUERY & POPPER-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <!--BOOTSTRAP 5-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <!-- CUSTOM SCRIPTS -->
