--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -1,4 +1,19 @@
-<div class="container dashboard-page">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<!--GOOGLE FONTS-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&family=Merienda:wght@700&display=swap" rel="stylesheet">
+<!--CUSTOM STYLES-->
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>PetTrax: Dashboard</title>
+</head>
+
+<body class="container dashboard-page">
 
   <header class="container header">
     <div class="col-12">
@@ -67,12 +82,17 @@
   </div>
 
 
-
+  <!--JQUERY & POPPER-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <!--BOOTSTRAP 5-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <!-- CUSTOM SCRIPTS -->
   <script src="./js/login.js"></script>
 
-</div>
+</body>
 
 </html>
