--- a/public/login.html
+++ b/public/login.html
@@ -22,13 +22,14 @@
     <div class="row justify-content-center">
       <!-- Login form wrapper -->
       <div class="col col-10 col-md-6">
-        <form action="./js/login.js" method="POST">
+        <form action="./dashboard.html" method="POST">
+        <!-- <form action="./js/login.js" method="POST"> -->
           <img src="./img/PetTrax_Logo-login.svg" alt="PetTrax logo"><br><br>
-          <input type="email" id="email" name="email" placeholder="email address" required><br>
-          <input type="password" id="password" name="password" placeholder="password" required><br><br>
+          <input type="email" id="email" name="email" placeholder="email" required><br>
+          <input type="current-password" id="current-password" name="current-password" placeholder="current-password" required><br><br>
           <button type="submit">LOG IN</button>
         </form><br><br>
-        <button type="button" class="inversebutton" onclick="return signupFormHandler()">new user? sign up</button>
+        <a href="signup.html"><button type="button" class="inversebutton">new user? sign up</button>
       </div>
     </div>
   </div>
